# vortex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  crates.js  help.html  index.html  prompt.md  release-please-config.json  settings.html  src-files.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improvement.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/app/: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: execute_request.rs  lib.rs
crates/application/src/auth/: mod.rs  provider.rs  token_store.rs
crates/application/src/ports/: collection_repository.rs  environment_repository.rs  http_client.rs  mod.rs  storage.rs  workspace_repository.rs
crates/application/src/use_cases/: save_collection.rs  update_request.rs
crates/application/src/use_cases/environment/: list_environments.rs  load_environment.rs  resolve_variables.rs  save_environment.rs  switch_environment.rs
crates/application/src/variable_resolver/: builtins.rs  engine.rs  mod.rs  parser.rs
crates/domain/: Cargo.toml
crates/ui/src/: lib.rs  (+2 more)
crates/vortex-core/: Cargo.toml
crates/vortex-core/src/: config.rs  lib.rs
crates/vortex-core/src/config/: map.rs  source.rs  value.rs
crates/vortex-core/tests/: domain_tests.rs
crates/vortex-git/: Cargo.toml
crates/vortex-server/: Cargo.toml
crates/vortex-sources/: Cargo.toml
deployment/: Dockerfile
docs/: PRD.md  index.html  postman-like-client-design.md
docs/roadmap/: 00-product-vision.md  01-competitive-analysis.md  02-file-format-spec.md  03-ui-ux-specification.md  README.md  milestones.md  sprint-00-foundations.md  sprint-01-mvp-execution-ui.md  sprint-02-persistence-collections.md  sprint-03-environments-variables.md  sprint-04-postman-import.md  sprint-05-auth-body-advanced.md  sprint-06-tests-runner-reporting.md  sprint-07-extensibility.md
search.index/: 028818bc2ae3.js  0367169ff013.js  050699730973.js  06008bb24bc6.js  069902db9bd7.js  0815be988960.js  0935e5a64b18.js  09450140fdce.js  0b91d80c276b.js  0ddb5eb2547e.js  0e11c3333ebd.js  0fb08fc8105d.js  106f1a7f43d1.js  1115c34f0fdd.js  135b9d78bce2.js  1381878c2cee.js  13ecbf8bea5b.js  15aa20c5f2e6.js  1627bfab5f5c.js  1682f5ee2aae.js  171c237f5d16.js  1e00b9d7c64b.js  1e3fc78aa125.js  1e64d18cdbcf.js  2180050789d2.js  225c4682e985.js  2326cc1acfa9.js  23a2909873ad.js  246bef0cb3ab.js  247eda4e3e87.js  27ecf3f8a132.js  283fc71e1df4.js  2a9a8c4ef4ec.js  2b017b0eddfb.js  2cbf8c169e6c.js  30f66ea17586.js  358d4f06b583.js  36913ef02b43.js  37e2e2a49162.js  3b23bce31271.js  (+50 more)
search.index/crateNames/: a5f5c55d2cc1.js
search.index/desc/: bc4a69cb8c27.js
search.index/entry/: 3816fa30f802.js
search.index/function/: 6ffd6dda387e.js
search.index/generic_inverted_index/: fcf82c0dab70.js
search.index/name/: 89f7d8c5878c.js
search.index/normalizedName/: 6e7e0898ad94.js
vortex/: .gitignore  Cargo.toml
vortex/.github/workflows/: ci.yml
vortex/crates/app/: Cargo.toml
vortex/crates/app/tests/: persistence_test.rs
vortex/crates/application/: Cargo.toml
vortex/crates/application/src/: error.rs  execute_request.rs  lib.rs
vortex/crates/application/src/auth/: token_store.rs
vortex/crates/application/src/ports/: clock.rs  collection_repository.rs  file_system.rs  http_client.rs  mod.rs  secrets_repository.rs
vortex/crates/application/src/use_cases/: create_request.rs  create_workspace.rs  load_collection.rs  mod.rs  save_collection.rs  update_request.rs
vortex/crates/application/src/use_cases/environment/: load_environment.rs  mod.rs  resolve_variables.rs  save_environment.rs  switch_environment.rs
vortex/crates/application/src/variable_resolver/: builtins.rs  parser.rs
vortex/crates/domain/: Cargo.toml
vortex/crates/domain/src/: history.rs  id.rs  lib.rs  scripting.rs  testing.rs  tls.rs  websocket.rs
vortex/crates/domain/src/auth/: mod.rs  types.rs
vortex/crates/domain/src/environment/: mod.rs  resolution.rs  variable.rs
vortex/crates/domain/src/persistence/: body.rs  folder.rs  mod.rs  test_assertion.rs  workspace.rs
vortex/crates/domain/src/request/: method.rs  mod.rs  query.rs  spec.rs
vortex/crates/domain/src/response/: mod.rs  spec.rs
vortex/crates/infrastructure/: Cargo.toml
vortex/crates/infrastructure/src/: lib.rs
vortex/crates/infrastructure/src/adapters/: mod.rs
vortex/crates/infrastructure/src/codegen/: generator.rs
vortex/crates/infrastructure/src/export/: mod.rs
vortex/crates/infrastructure/src/http/: mod.rs
vortex/crates/infrastructure/src/import/postman/: importer.rs  mapper.rs  mod.rs  warning.rs
vortex/crates/infrastructure/src/persistence/: environment_repository.rs  file_system.rs  history_repository.rs  mod.rs
vortex/crates/infrastructure/src/scripting/: parser.rs
vortex/crates/infrastructure/src/serialization/: json.rs
vortex/crates/infrastructure/src/testing/: runner.rs
vortex/crates/ui/: Cargo.toml  build.rs
vortex/crates/ui/src/: app_window.rs  bridge.rs  lib.rs
vortex/crates/ui/src/state/: collection_state.rs  mod.rs
vortex/crates/ui/src/ui/: main_window.slint  theme.slint
vortex/crates/ui/src/ui/components/: auth_editor.slint  code_generator_dialog.slint  collection_tree.slint  environment_manager.slint  header_bar.slint  headers_editor.slint  history_panel.slint  method_selector.slint  query_params_editor.slint  quick_search.slint  request_editor.slint  request_tabs.slint  response_panel.slint  settings_dialog.slint  url_bar.slint  url_bar_with_preview.slint  variables_editor.slint
vortex/tests/integration/: mod.rs
vortex_core/: all.html  enum.ConfigValue.html  enum.VortexError.html  fn.version.html  index.html  sidebar-items.js  struct.Application.html  struct.ConfigMap.html  struct.Label.html  struct.Profile.html  struct.PropertySource.html  type.Result.html
vortex_git/: all.html  index.html  sidebar-items.js
vortex_server/: all.html  index.html  sidebar-items.js
vortex_sources/: all.html  fn.version.html  index.html
(+442 files in other folders)
