[package]
name = "vortex-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Application layer for Vortex API Client"

[dependencies]
vortex-domain = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
