[package]
name = "vortex-sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sources types and traits for Vortex Config"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true