[package]
name = "vortex-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Infrastructure adapters for Vortex API Client"

[dependencies]
vortex-domain = { workspace = true }
vortex-application = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"
dirs = "6.0"
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.15"

[lints]
workspace = true
