[package]
name = "vortex-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Infrastructure adapters for Vortex API Client"

[dependencies]
vortex-domain = { workspace = true }
vortex-application = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = {workspace = true}
dirs = "6.0.0"
uuid = { workspace = true }
serde_urlencoded = { workspace = true }
mime_guess = { workspace = true }
mime = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = {workspace = true}

[lints]
workspace = true
